--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-	
+	<div class="container">
+		<header>
+			<h1>Jogo da Memória</h1>
+		</header>
+		<section class="score-panel">
+			<ul class="stars">
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<span class="moves"></span>
+			<div class="restart"></div>
+		</section>
+		<ul class="deck">
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+			<li class="card"></li>
+		</ul>
+	</div>
 	<script src="js/app.js"></script>
 </body>
 </html>
