--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 		</header>
 		<section class="score-panel">
 			<ul class="stars">
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
 			</ul>
-			<span class="moves"></span>
-			<div class="restart"></div>
+			<span class="moves"></span> Moves
+			<div class="restart">
+				<i class="fa fa-repeat"></i>
+			</div>
 		</section>
 		<ul class="deck">
 			<li class="card"></li>
