--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		</header>
 		<section class="score-panel">
 			<ul class="stars">
-				<li><i class="fa fa-star"></i></li>
-				<li><i class="fa fa-star"></i></li>
-				<li><i class="fa fa-star"></i></li>
+				<li><i class="fa fa-star shine"></i></li>
+				<li><i class="fa fa-star shine"></i></li>
+				<li><i class="fa fa-star shine"></i></li>
 			</ul>
 			<span class="moves"></span> Moves
 			<div class="restart">
