--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
 				<i class="fa fa-cube"></i>
 			</li>
 		</ul>
+
+		<div id="congrats-popup" class="overlay">
+			<div class="popup">
+				<h2>Parabéns! Você ganhou!</h2>
+				<div class="summary">
+					<p><span id="total-moves"></span> Moves</p>
+					<p>Avaliação: <span id="star-rating"></span></p>
+				</div>
+				<button id="play-again" class="restart">Jogar novamente</button>
+			</div>
+		</div>
 	</div>
 	<script src="js/app.js"></script>
 </body>
