adicionado botão close popup no html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
 		<div id="congrats-popup" class="overlay">
 			<div class="popup">
+				<a href="#" id="close-popup">X</a>
 				<h2>Parabéns! Você ganhou!</h2>
 				<div class="summary">
 					<p><span id="total-moves"></span> Moves</p>
