removido botões e funções de close popup, deixando apenas jogar novamente

--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
 
 		<div id="congrats-popup" class="overlay">
 			<div class="popup">
-				<a href="#" class="close-popup">X</a>
 				<h2>Parabéns! Você ganhou!</h2>
 				<div class="summary">
 					<p><span id="total-moves"></span> Moves</p>
 					<p>Avaliação: <span id="star-rating"></span></p>
 				</div>
-				<button id="play-again" class="restart close-popup">Jogar novamente</button>
+				<button id="play-again">Jogar novamente</button>
 			</div>
 		</div>
 	</div>
