corrigido stars no html e css

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<h2>Parabéns! Você ganhou!</h2>
 				<div class="summary">
 					<p><span id="total-moves"></span> Moves</p>
-					<p>Avaliação: <span id="star-rating"></span></p>
+					<p>Avaliação: <span id="star-rating" class="stars"></span></p>
 				</div>
 				<button id="play-again">Jogar novamente</button>
 			</div>
