alterado "moves" para "movimentos" no html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><i class="fa fa-star shine"></i></li>
 				<li><i class="fa fa-star shine"></i></li>
 			</ul>
-			<span class="moves"></span> Moves
+			<span class="moves"></span> Movimentos
 			<div class="restart">
 				<i class="fa fa-repeat"></i>
 			</div>
@@ -79,7 +79,7 @@
 			<div class="popup">
 				<h2>Parabéns! Você ganhou!</h2>
 				<div class="summary">
-					<p><span id="total-moves"></span> Moves</p>
+					<p><span id="total-moves"></span> Movimentos</p>
 					<p>Avaliação: <span id="star-rating" class="stars"></span></p>
 				</div>
 				<button id="play-again">Jogar novamente</button>
