--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<li class="card" type="plane">
 				<i class="fa fa-paper-plane-o"></i>
 			</li>
-			<li class="card match" type="anchor">
+			<li class="card" type="anchor">
 				<i class="fa fa-anchor"></i>
 			</li>
 			<li class="card" type="bolt" >
@@ -40,7 +40,7 @@
 			<li class="card" type="cube">
 				<i class="fa fa-cube"></i>
 			</li>
-			<li class="card match" type="anchor">
+			<li class="card" type="anchor">
 				<i class="fa fa-anchor"></i>
 			</li>
 			<li class="card" type="leaf">
@@ -61,7 +61,7 @@
 			<li class="card" type="bomb">
 				<i class="fa fa-bomb"></i>
 			</li>
-			<li class="card open show" type="bolt">
+			<li class="card" type="bolt">
 				<i class="fa fa-bolt"></i>
 			</li>
 			<li class="card" type="bicycle">
@@ -74,7 +74,6 @@
 				<i class="fa fa-cube"></i>
 			</li>
 		</ul>
-
 		<div id="congrats-popup" class="overlay">
 			<div class="popup">
 				<h2>Parabéns! Você ganhou!</h2>
