--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<li><i class="fa fa-star shine"></i></li>
 			</ul>
 			<span class="moves"></span> Movimentos
+			<div class="timer"></div>
 			<div class="restart">
 				<i class="fa fa-repeat"></i>
 			</div>
@@ -79,6 +80,7 @@
 				<h2>Parabéns! Você ganhou!</h2>
 				<div class="summary">
 					<p><span id="total-moves"></span> Movimentos</p>
+					<p>Tempo: <span id="total-time"></span></p>
 					<p>Avaliação: <span id="star-rating" class="stars"></span></p>
 				</div>
 				<button id="play-again">Jogar novamente</button>
