--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><i class="fa fa-star shine"></i></li>
 				<li><i class="fa fa-star shine"></i></li>
 			</ul>
-			<span class="moves"></span> Movimentos
+			<div class="moves"><span class="counter"></span> Movimentos</div>
 			<div class="timer"></div>
 			<div class="restart">
 				<i class="fa fa-repeat"></i>
